[package]
name = "netshell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.154"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.20.0"
netlink-packet-utils = "0.5.2"
netlink-sys = "0.8.6"
# linux = "0.0.1"
pnet = "0.34.0"
