[package]
name = "netshell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
libc = "0.2.154"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.20.0"
netlink-packet-utils = "0.5.2"
netlink-sys = "0.8.6"
pnet = "0.34.0"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
tabled = "0.15.0"
tokio = { version = "1.37.0", features = ["full"]}
